# fantastic-engine

./: .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  requirements.txt
.claude/: README.md
.claude/agents/: brainstorm-buddy.md  doc-writer.md  experiment-guide.md  learn-assistant.md
.claude/skills/: README.md
.github/workflows/: docs.yml
docs/: adhd-productivity-learning-roadmap.md  index.md  learning-skills.md  skills-collection.md
docs/experiments/: ai-kit-gamified-agents.md  context7-mcp-experiment.md  github-streak-saver.md  goose-doc-management.md  index.md  memory-knowledge-graph-learning.md  speckit-learning-guide.md  syntax-highlighter-playground.md  voice-to-documentation.md
docs/getting-started/: overview.md  quick-start.md
docs/javascripts/: cyberpunk.js
docs/learning-log/: index.md
docs/projects/: advanced-go-learning.md  index.md  industry-news-aggregator-mcp-setup.md  industry-news-aggregator-quickstart.md  industry-news-aggregator.md  oauth2-learning-guide.md  oauth2-mcp-exploration.md  rag-learning-project.md  ticktick-priority-agent.md
docs/stylesheets/: cyberpunk.css
docs/templates/: documentation.md  project-template.md
experiments/: index.md
experiments/ai-agent-battle-arena/: README.md
experiments/ai-engineer-learning/: ADVANCED.md  LEARNING.md  QUICKSTART.md  README.md  requirements-advanced.txt  requirements-learning.txt  requirements.txt  setup.sh
experiments/ai-kit-gamified-agents/: README.md
experiments/ai-productivity-orchestration/: QUICK-START.md  README.md  agent-configs.md  agent-testing-log.md  ai-agent-testing-checklist.md  ai-tool-integration-solution.md  daily-routine.md  mcp-setup.md  practical-use-cases.md  prompt-library.md  quick-start.md  weekly-tracker.md  workflow-templates.md
experiments/ai-technologies-2025/: README.md  requirements.txt
experiments/context7-mcp-experiment/: METRICS.md  PROMPT-LIBRARY.md  QUICKSTART.md  README.md  config.example.json
experiments/daily-learning-digest/: README.md
experiments/github-streak-saver/: README.md  deno.json
experiments/goose-doc-management/: .gitignore  QUICKSTART.md  README.md  config.example.yaml
experiments/hyperfocus-tracker/: README.md
experiments/memory-knowledge-graph-learning/: QUICKSTART.md  README.md  setup.sh  (+1 more)
experiments/voice-to-documentation/: .env.example  README.md  pyproject.toml
experiments/voice-to-documentation/src/: main.py
projects/adhd-dev-dashboard/backend/: database.py  main.py  pyproject.toml
projects/advanced-python-learning/: README.md  pyproject.toml
projects/advanced-python-learning/01-metaclasses/: README.md  metaclass_examples.py
projects/advanced-python-learning/02-descriptors/: README.md  descriptor_examples.py
projects/advanced-python-learning/03-context-managers/: README.md  context_examples.py
projects/advanced-python-learning/04-decorators-advanced/: README.md  decorator_examples.py
projects/advanced-python-learning/05-generators-coroutines/: README.md  generator_examples.py
projects/advanced-python-learning/06-async-programming/: README.md  async_examples.py
projects/advanced-python-learning/07-multiprocessing/: README.md
projects/advanced-python-learning/08-memory-profiling/: README.md
projects/advanced-python-learning/09-custom-iterators/: README.md
projects/advanced-python-learning/10-dataclass-protocols/: README.md
projects/advanced-python-learning/11-type-system-advanced/: README.md
projects/advanced-python-learning/12-ast-manipulation/: README.md
projects/advanced-python-learning/13-bytecode-optimization/: README.md
projects/advanced-python-learning/14-c-extensions/: README.md
projects/advanced-python-learning/15-metaprogramming/: README.md
projects/advanced-python-learning/16-custom-import-system/: README.md
projects/advanced-python-learning/17-memory-management/: README.md
projects/advanced-python-learning/18-concurrent-futures/: README.md
projects/advanced-python-learning/19-distributed-computing/: README.md
projects/advanced-python-learning/20-language-implementation/: README.md
projects/context-switch-assistant/: IMPLEMENTATION.md  README.md  pyproject.toml
projects/context-switch-assistant/src/: cli.py  snapshot.py
projects/distributed-systems-from-scratch/event-sourcing/: Cargo.toml
projects/distributed-systems-from-scratch/event-sourcing/src/: main.rs
projects/language-models-from-scratch/: README.md  pyproject.toml
projects/language-models-from-scratch/docs/: concepts.md  learning-path.md
projects/language-models-from-scratch/model-01-char-rnn/: README.md  generate.py  model.py  train.py
projects/language-models-from-scratch/model-02-word-rnn/: README.md  generate.py  model.py  train.py
projects/language-models-from-scratch/model-03-lstm-attention/: README.md  generate.py  model.py  train.py
projects/language-models-from-scratch/model-04-mini-transformer/: README.md  generate.py  model.py  train.py
projects/language-models-from-scratch/model-05-gpt-style/: README.md  generate.py  model.py  train.py
projects/language-models-from-scratch/shared/data/: README.md  download.py
projects/language-models-from-scratch/shared/utils/: __init__.py
projects/llm-cost-optimizer/: IMPLEMENTATION.md  README.md  pyproject.toml
projects/llm-cost-optimizer/src/: cli.py  tracker.py
projects/rust-learning-path/10-async-web-server/: Cargo.toml  README.md
projects/rust-learning-path/10-async-web-server/src/: main.rs
(+763 files in other folders)
