[project]
name = "context-switch-assistant"
version = "0.1.0"
description = "Auto-snapshot and restore your development context"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.0",
    "psutil>=5.9.8",
    "gitpython>=3.1.41",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
]

[project.scripts]
context-switch = "src.cli:main"
