[project]
name = "llm-cost-optimizer"
version = "0.1.0"
description = "Track and optimize LLM costs across projects"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "plotly>=5.18.0",
    "pandas>=2.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
]

[project.scripts]
llm-cost = "src.cli:main"
