[package]
name = "async-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tokio - The async runtime
tokio = { version = "1.35", features = ["full"] }

# For working with futures
futures = "0.3"

# For error handling
anyhow = "1.0"
thiserror = "1.0"

# For serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For HTTP parsing and handling (simple implementation)
httparse = "1.8"

# For timestamps and date/time
chrono = "0.4"

[dev-dependencies]
# For testing async code
tokio-test = "0.4"
